# tarea1-mod2-anahi

./: LICENSE  README.md  pyproject.toml  tarea2.ipynb
